# CPPTravisGTestTemplate

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
scripts/: lib.py  run.py  test.py
src/: CMakeLists.txt  Formula.h  main.cpp
test/: CMakeLists.txt  Formula-test.cpp  Formula.test.cpp
